# et2-smart-city-air-intelligence

./: .gitignore  ARCHITECTURE.md  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml  verify_deployment.sh
.github/workflows/: ci.yml  deploy-frontend.yml
ai_engine/: core_intelligence.py
ai_engine/explainability/: shap_engine.py
ai_engine/models/: baseline.py  gnn_forecast.py  lightgbm_forecast.py
ai_engine/notifications/: llm_advisories.py
ai_engine/optimization/: inspector_routing.py
backend/: Dockerfile  core_tasks.py  data_pipeline.py  database.py  main.py  requirements.txt  schema.sql
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AirQualityDashboard.jsx
fusion/: grid_fusion.py
ingestion/: iot_caaqms.py  satellite_raster.py  traffic_mobility.py  weather_api.py
k8s/: api-deployment.yaml  celery-deployment.yaml
tests/: test_e2e_pipeline.py  test_mathematical_validation.py
