[tool.poetry]
name = "et2-smart-city-air-intelligence"
version = "0.1.0"
description = "AI-Powered Urban Air Quality Intelligence for Smart City Intervention"
authors = ["AI Engineer <ai@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
kafka-python = "^2.0.2"
redis = "^5.0.0"
psycopg2-binary = "^2.9.7"
sqlalchemy = "^2.0.19"
geoalchemy2 = "^0.14.1"
geopandas = "^0.13.2"
shapely = "^2.0.1"
rasterio = "^1.3.8"
lightgbm = "^4.0.0"
torch = "^2.0.1"
torch_geometric = "^2.3.1"
shap = "^0.42.1"
langchain = "^0.0.267"
openai = "^0.27.8"
pydantic = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
